project site updates

--- a/Labs/Week01_GettingStartedinSPSS_Lab.Rmd
+++ b/Labs/Week01_GettingStartedinSPSS_Lab.Rmd
@@ -644,9 +644,12 @@ quiz(caption = '',
               answer("False"),
               message = 'The nonbinary group is much smaller than the other two measured groups.'),
      question_numeric("How many total datapoints do you have for the gender variable?",
-              answer(45, correct=T)),
+              answer(45, correct=T),
+              message = "If you've properly filtered the data, you should have 45 total datapoints for the gender variable."),
      question_numeric("What percentage of participants are female?",
-              answer(42.2, correct=T)),
+              answer(42.2, correct=T),
+              tolerance = .1,
+              message = "If you've properly filtered the data, 42.2% of the students are female."),
      question('Which of the following is appropriate for visualising the frequency distribution of continuous variables?',
               answer('Bar Chart'),
               answer('Histogram', correct = T),
